// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssignSubContractorTab should change view type 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="makeStyles-filterActionsContainer-1190 makeStyles-filterActionsContainerPadding-1192"
  >
    <div
      class="makeStyles-filterActionsContainerLeft-1191"
    >
      <div
        class="MuiBox-root MuiBox-root-1218 makeStyles-filterStatusContainer-1193 makeStyles-autocompleteFilterStatus-1210 makeStyles-leftFilter-1180"
      >
        <div
          class="makeStyles-floatingFilterWrapper-1199 makeStyles-filterWrapper-1198  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-1200"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-1208"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Roles
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-1202"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <hr
        class="MuiDivider-root makeStyles-dividerColor-1203 MuiDivider-flexItem MuiDivider-vertical"
      />
      <div
        class="MuiBox-root MuiBox-root-1219 makeStyles-filterStatusContainer-1193 makeStyles-leftFilterStatusContainer-1197 makeStyles-autocompleteFilterPosition-1082"
      >
        <div
          class="makeStyles-floatingFilterWrapper-1199 makeStyles-filterWrapper-1198 makeStyles-buttonContainer-1221 floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-1200"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-1208"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Locations
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-1202"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-rightActionButtonsContainer-1211"
    >
      <div
        class="makeStyles-iconActionButtonsContainer-1212"
      >
        <svg
          class="makeStyles-iconButtonActive-1213"
          data-testid="list-view-btn"
          role="button"
        >
          list.svg
        </svg>
        <svg
          class="makeStyles-iconButtonInactive-1214"
          data-testid="hierarchy-view-btn"
          role="button"
        >
          hierarchy.svg
        </svg>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-1154 makeStyles-primaryButtonExtraLarge-1158 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="opensubcontractor-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign Subcontractor
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <table
    aria-label="client-list"
    class="MuiTable-root"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Role in Project
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Location
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Trades
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Status in Project
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    />
  </table>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root  makeStyles-pagination-1457"
    data-testid="pagination"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-1458 makeStyles-close-1469 closed"
    data-testid="client-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-1459 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-1461"
      >
        <div
          class="makeStyles-drawerButton-1462"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-1460"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-1463 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Client Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-1488"
      >
        <div
          class="makeStyles-company-1489"
        >
          <div
            class="makeStyles-drawerText-1465"
          >
            <p
              class="MuiTypography-root makeStyles-listAccent-1490 makeStyles-entityTitle-1487 MuiTypography-body1"
            />
            <div
              class="makeStyles-drawerMainText-1466"
            >
              <span>
                -
              </span>
              <span>
                -
              </span>
              <span />
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-1464"
          >
            <svg>
              location.svg
            </svg>
            <div
              class="makeStyles-drawerText-1465 makeStyles-drawerTextSeparation-1467"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-1500  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-1500  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-1464"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-1465 makeStyles-drawerTextSeparation-1467"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-1500  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-1500  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-1464"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-1465 makeStyles-drawerTextSeparation-1467"
            >
              <span
                class="makeStyles-listAccent-1490"
              >
                -
              </span>
              <span>
                -
              </span>
              <span>
                -
              </span>
            </div>
          </div>
        </div>
        <div
          class="makeStyles-ctaWrapper-1491"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AssignSubContractorTab should open modal 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="makeStyles-filterActionsContainer-472 makeStyles-filterActionsContainerPadding-474"
  >
    <div
      class="makeStyles-filterActionsContainerLeft-473"
    >
      <div
        class="MuiBox-root MuiBox-root-500 makeStyles-filterStatusContainer-475 makeStyles-autocompleteFilterStatus-492 makeStyles-leftFilter-462"
      >
        <div
          class="makeStyles-floatingFilterWrapper-481 makeStyles-filterWrapper-480  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-482"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-490"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Roles
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-484"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <hr
        class="MuiDivider-root makeStyles-dividerColor-485 MuiDivider-flexItem MuiDivider-vertical"
      />
      <div
        class="MuiBox-root MuiBox-root-501 makeStyles-filterStatusContainer-475 makeStyles-leftFilterStatusContainer-479 makeStyles-autocompleteFilterPosition-364"
      >
        <div
          class="makeStyles-floatingFilterWrapper-481 makeStyles-filterWrapper-480 makeStyles-buttonContainer-503 floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-482"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-490"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Locations
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-484"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-rightActionButtonsContainer-493"
    >
      <div
        class="makeStyles-iconActionButtonsContainer-494"
      >
        <svg
          class="makeStyles-iconButtonActive-495"
          data-testid="list-view-btn"
          role="button"
        >
          list.svg
        </svg>
        <svg
          class="makeStyles-iconButtonInactive-496"
          data-testid="hierarchy-view-btn"
          role="button"
        >
          hierarchy.svg
        </svg>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-436 makeStyles-primaryButtonExtraLarge-440 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="opensubcontractor-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign Subcontractor
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <table
    aria-label="client-list"
    class="MuiTable-root"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Role in Project
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Location
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Trades
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Status in Project
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    />
  </table>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root  makeStyles-pagination-544"
    data-testid="pagination"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-545 makeStyles-close-556 closed"
    data-testid="client-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-546 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-548"
      >
        <div
          class="makeStyles-drawerButton-549"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-547"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-550 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Client Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-575"
      >
        <div
          class="makeStyles-company-576"
        >
          <div
            class="makeStyles-drawerText-552"
          >
            <p
              class="MuiTypography-root makeStyles-listAccent-577 makeStyles-entityTitle-574 MuiTypography-body1"
            />
            <div
              class="makeStyles-drawerMainText-553"
            >
              <span>
                -
              </span>
              <span>
                -
              </span>
              <span />
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-551"
          >
            <svg>
              location.svg
            </svg>
            <div
              class="makeStyles-drawerText-552 makeStyles-drawerTextSeparation-554"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-587  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-587  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-551"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-552 makeStyles-drawerTextSeparation-554"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-587  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-587  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-551"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-552 makeStyles-drawerTextSeparation-554"
            >
              <span
                class="makeStyles-listAccent-577"
              >
                -
              </span>
              <span>
                -
              </span>
              <span>
                -
              </span>
            </div>
          </div>
        </div>
        <div
          class="makeStyles-ctaWrapper-578"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AssignSubContractorTab should render 1`] = `
<div
  aria-hidden="true"
>
  <div
    class="makeStyles-filterActionsContainer-113 makeStyles-filterActionsContainerPadding-115"
  >
    <div
      class="makeStyles-filterActionsContainerLeft-114"
    >
      <div
        class="MuiBox-root MuiBox-root-141 makeStyles-filterStatusContainer-116 makeStyles-autocompleteFilterStatus-133 makeStyles-leftFilter-103"
      >
        <div
          class="makeStyles-floatingFilterWrapper-122 makeStyles-filterWrapper-121  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-123"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-131"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Roles
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-125"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <hr
        class="MuiDivider-root makeStyles-dividerColor-126 MuiDivider-flexItem MuiDivider-vertical"
      />
      <div
        class="MuiBox-root MuiBox-root-142 makeStyles-filterStatusContainer-116 makeStyles-leftFilterStatusContainer-120 makeStyles-autocompleteFilterPosition-5"
      >
        <div
          class="makeStyles-floatingFilterWrapper-122 makeStyles-filterWrapper-121 makeStyles-buttonContainer-144 floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-123"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-131"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All Locations
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-125"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-rightActionButtonsContainer-134"
    >
      <div
        class="makeStyles-iconActionButtonsContainer-135"
      >
        <svg
          class="makeStyles-iconButtonActive-136"
          data-testid="list-view-btn"
          role="button"
        >
          list.svg
        </svg>
        <svg
          class="makeStyles-iconButtonInactive-137"
          data-testid="hierarchy-view-btn"
          role="button"
        >
          hierarchy.svg
        </svg>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-77 makeStyles-primaryButtonExtraLarge-81 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="opensubcontractor-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign Subcontractor
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
  </div>
  <table
    aria-label="client-list"
    class="MuiTable-root"
  >
    <thead
      class="MuiTableHead-root"
    >
      <tr
        class="MuiTableRow-root MuiTableRow-head"
      >
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Name
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Role in Project
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Location
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Trades
        </th>
        <th
          class="MuiTableCell-root MuiTableCell-head"
          scope="col"
        >
          Status in Project
        </th>
      </tr>
    </thead>
    <tbody
      class="MuiTableBody-root"
    />
  </table>
  <nav
    aria-label="pagination navigation"
    class="MuiPagination-root  makeStyles-pagination-185"
    data-testid="pagination"
  >
    <ul
      class="MuiPagination-ul"
    >
      <li>
        <button
          aria-label="Go to previous page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Go to next page"
          class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-page Mui-disabled Mui-disabled"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiPaginationItem-icon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
  <div
    class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-186 makeStyles-close-197 closed"
    data-testid="client-drawer-detail"
  >
    <div
      class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-187 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
      style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
    >
      <div
        class="makeStyles-drawerButtonWrapper-189"
      >
        <div
          class="makeStyles-drawerButton-190"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text"
            data-testid="drawer-close-btn"
            style="outline: none;"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <svg>
                close.svg
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
        <div
          class="makeStyles-drawerHeader-188"
        >
          <p
            class="MuiTypography-root makeStyles-drawerTitle-191 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
          >
            Client Information
          </p>
        </div>
      </div>
      <div
        class="makeStyles-listDetail-216"
      >
        <div
          class="makeStyles-company-217"
        >
          <div
            class="makeStyles-drawerText-193"
          >
            <p
              class="MuiTypography-root makeStyles-listAccent-218 makeStyles-entityTitle-215 MuiTypography-body1"
            />
            <div
              class="makeStyles-drawerMainText-194"
            >
              <span>
                -
              </span>
              <span>
                -
              </span>
              <span />
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-192"
          >
            <svg>
              location.svg
            </svg>
            <div
              class="makeStyles-drawerText-193 makeStyles-drawerTextSeparation-195"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-228  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-228  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-192"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-193 makeStyles-drawerTextSeparation-195"
            >
              <p
                class="MuiTypography-root makeStyles-cardFont-228  MuiTypography-body1"
              >
                
                <span
                  class=" "
                >
                  -
                </span>
              </p>
              <p
                class="MuiTypography-root makeStyles-cardFont-228  MuiTypography-body1"
              >
                
                
                
                
              </p>
            </div>
          </div>
          <div
            class="makeStyles-drawerSection-192"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
              />
            </svg>
            <div
              class="makeStyles-drawerText-193 makeStyles-drawerTextSeparation-195"
            >
              <span
                class="makeStyles-listAccent-218"
              >
                -
              </span>
              <span>
                -
              </span>
              <span>
                -
              </span>
            </div>
          </div>
        </div>
        <div
          class="makeStyles-ctaWrapper-219"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`AssignSubContractorTab should unmount 1`] = `
[MockFunction] {
  "calls": Array [
    Array [],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
